# Prospectus-Graphicus

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  pyproject.toml
docs/: azure-app-registration.md
prospectus_graphicus/: __init__.py  cli.py  config.py  errors.py  output.py
prospectus_graphicus/auctoritas/: __init__.py  device_code.py  scopes.py  token.py
prospectus_graphicus/commands/: auth.py  mail.py
prospectus_graphicus/graphus/: __init__.py  paginator.py
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  output.rs
src/auctoritas/: device_code.rs  mod.rs  scopes.rs  token.rs
src/commands/: auth.rs  mail.rs  mod.rs
src/graphus/: mod.rs  paginator.rs
tests/: auth_login.rs  mail_list.rs
tests/common/: mod.rs
tests_py/: test_output.py
