[package]
name = "prospectus-graphicus"
version = "0.1.0"
edition = "2024"
description = "Prospectus Graphicus: a command-line instrument for handling Outlook's letters through the Microsoft Graph."
license = "MIT"
readme = "README.md"
repository = "https://github.com/mcburton/prospectus-graphicus"
publish = false

[[bin]]
name = "prospectus"
path = "src/main.rs"

[lib]
name = "prospectus_graphicus"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
keyring = "3"
tabled = "0.16"
url = "2"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
